--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ caption{
 body{
   background-color: #DDDDDD;
   background-image: url('../images/pigeon-background.JPEG');
+  background-repeat:no-repeat;
   color: #000000;
   font-size: 16px;
   margin: 1.2em;
@@ -54,7 +55,7 @@ p{
 }
 
 a:link{
-  color: #B92751;
+  color: #B21F50;
   text-decoration-style: wavy;
   font-size: 16px;
 }
@@ -71,14 +72,15 @@ td{
 
 }
 
-tr:hover {
-  background-color: rgba(126, 8, 37, 0.25);
-}
-
 
 tr:nth-child(even) {
   background: #D1D1D1;
 }
+
+tr:hover {
+  background-color: rgba(126, 8, 37, 0.25);
+}
+
 
 tr td:last-child{
   border-right: 5px solid #000000;
@@ -108,6 +110,9 @@ tr:last-child{
   text-transform: uppercase;
   justify-items: center;
   background-color: #7e0825;
+  text-align: center;
+  vertical-align: middle;
+  border-top: 5px solid #000000;
 
 
 
@@ -142,6 +147,13 @@ thead tr:first-child th:first-child{
 thead tr:last-child th:last-child{
   border-radius: 0px 50px 0px 0px;
 }
+
+/*  
+tr:nth-child(10){
+  border-radius: 0px 0px 50px 0px;
+  border-bottom: 5px solid #000000;
+}
+ */
 
 
 /*Add selectors and rules here*/
